--- a/package.json
+++ b/package.json
@@ -25,14 +25,21 @@
     "@sentry/nextjs": "9",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@uploadthing/react": "^7.3.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.232.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "swiper": "^11.2.6",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.4",
     "uploadthing": "^7.6.0",
     "zod": "^3.24.2"
   },
